--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.contenido {
+    max-width: 2600px;
+    margin: 0 auto;
+}
+
+img {
+    height: auto;
+}
